<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_new"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/nav_action_new" />

        <item
            android:id="@+id/nav_sort"
            android:icon="@drawable/ic_menu_sort"
            android:title="@string/nav_action_sort" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_action_settings" />

    </group>

    <item
        android:id="@+id/nav_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/nav_action_help" />

</menu>
