<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dou.packer.Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="seekbar progress..."
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_seekbar_progress"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="end" />

                    <TextView
                        android:text="@string/settings_item_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_settings_item_count"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:layout_toStartOf="@id/textView_seekbar_progress"/>
                </RelativeLayout>

                <TextView
                    android:text="@string/settings_item_count_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_settings_item_count_about" />

                <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/seekBar_setting_cnt" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ToggleButton
                    android:text="Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButton_setting_horizontal"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toStartOf="@id/toggleButton_setting_horizontal">

                    <TextView
                        android:text="@string/settings_orientation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_settings_orientation"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:text="@string/settings_orientation_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView_settings_orientation_about"
                        android:layout_weight="1" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
